build(tests): configure build script for jvm and android testing